typescript/checker/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration1.ts:2:17
  |
2 |   public public Foo;
  |                 ^^^

